<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="权益介绍"
        android:textStyle="bold"
        android:textColor="#1a1a1a"
        android:textSize="35dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text"
        android:textStyle="bold"
        android:textColor="#333333"
        android:textSize="13dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/pri1"/>

        <TextView
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:text="@string/text1"
            android:textSize="13dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pri2"/>

        <TextView
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:text="@string/text2"
            android:textSize="13dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pri3"/>

        <TextView
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/text3"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="#333333"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pri4" />

        <TextView
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/text4"
            android:textSize="13dp"
            android:textStyle="bold"
            android:textColor="#333333"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    </LinearLayout>
</LinearLayout>